# api_monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/rulesets/: main-protection.json
.github/workflows/: release.yml
deploy/: Dockerfile  api-monitor.service  docker-compose.yml
docs/: API中转站被动式模型真实性持续监控系统-技术规划与可行性报告.md  API中转站被动监控系统-完整技术方案.md  MVP-开发任务.md  OPERATIONS.md
extension/: README.md  content.js  manifest.json  popup.html
installer/windows/: README-INSTALL.txt  README.md  api_monitor.iss  apimonitor.spec  build-windows.ps1  launcher.py  stop-apimonitor.ps1
scripts/: merge-all-prs.sh
src/api_monitor/: __init__.py  __main__.py  config.py  models.py
src/api_monitor/alerts/: __init__.py  dispatcher.py  system_notify.py  webhook.py
src/api_monitor/analyzer/: __init__.py  baseline_builder.py  baseline_updater.py  drift.py  embedding_model.py  families.py  fusion.py  lexicon.py  logprobs.py  offline.py  reference.py  report.py  service.py  smoothing.py
src/api_monitor/cli/: main.py
src/api_monitor/dashboard/: __init__.py  ingest.py  routes.py
src/api_monitor/dashboard/static/: index.html
src/api_monitor/proxy/: __init__.py  app.py  extract.py
src/api_monitor/storage/: __init__.py  baseline.py  logger.py  user_settings.py
tests/: test_alerts.py  test_drift.py  test_embedding_mode.py  test_extract.py  test_families.py  test_ingest.py  test_logger.py  test_logprobs.py  test_proxy_health.py  test_reference.py  test_smoothing.py  test_user_settings.py
