[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-monitor"
version = "0.4.0"
description = "Passive API relay monitoring for LLM model authenticity"
readme = "README.md"
license = { text = "MPL-2.0" }
requires-python = ">=3.10"
authors = [{ name = "308081164" }]
keywords = ["llm", "api", "monitor", "proxy", "sentinel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
analyze = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
api-monitor = "api_monitor.cli.main:main"

[project.urls]
Homepage = "https://github.com/308081164/api_monitor"
Repository = "https://github.com/308081164/api_monitor"
Issues = "https://github.com/308081164/api_monitor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
api_monitor = ["dashboard/static/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
